Load deflate_module in httpd.conf #731

--- a/httpd.conf
+++ b/httpd.conf
@@ -3,10 +3,13 @@ Alias /labs/@WORLDVIEW@ /usr/share/@WORLDVIEW@/web
 
 AddHandler cgi-script .cgi
 
+LoadModule deflate_module modules/mod_deflate.so
+
 <Directory /usr/share/@WORLDVIEW@/web>
     AllowOverride All
     Order allow,deny
     Allow from all
+    AddOutputFilterByType DEFLATE text/html text/css text/xml application/javascript application/json
 </Directory>
 
 <Directory /usr/share/@WORLDVIEW@/web/service>
