--- a/httpd.conf
+++ b/httpd.conf
@@ -4,13 +4,73 @@ Alias /labs/@WORLDVIEW@ /usr/share/@WORLDVIEW@/web
 AddHandler cgi-script .cgi
 
 <Directory /usr/share/@WORLDVIEW@/web>
-    AllowOverride All
-    Order allow,deny
-    Allow from all
-    AddOutputFilterByType DEFLATE text/html text/css text/xml application/javascript application/json
+  AllowOverride none
+  Order allow,deny
+  Allow from all
+  ExpiresActive On
+
+  <FilesMatch index.html>
+    ExpiresDefault A0
+    Header set Cache-Control "no-cache, no-store, must-revalidate"
+    Header set Pragma "no-cache"
+  </FilesMatch>
+
+  AddOutputFilterByType DEFLATE text/html
+  AddOutputFilterByType DEFLATE text/css
+  AddOutputFilterByType DEFLATE text/javascript
+  AddOutputFilterByType DEFLATE application/javascript
+  AddOutputFilterByType DEFLATE application/json
+
+  AddType application/vnd.ms-fontobject .eot
+  AddType application/font-woff .woff
+  AddType application/x-font-truetype .ttf
+  AddType image/svg+xml .svg
+  AddType application/x-font-opentype .otf
+</Directory>
+
+<Directory /usr/share/@WORLDVIEW@/web/js>
+  ExpiresActive On
+  ExpiresDefault A0
+  Header set Cache-Control "no-cache, must-revalidate, public"
+  Header set Pragma "no-cache"
+</Directory>
+
+<Directory /usr/share/@WORLDVIEW@/web/config>
+  ExpiresActive On
+  ExpiresDefault A0
+  Header set Cache-Control "no-cache, must-revalidate, public"
+  Header set Pragma "no-cache"
+</Directory>
+
+<Directory /usr/share/@WORLDVIEW@/web/css>
+  ExpiresActive On
+  ExpiresDefault A0
+  Header set Cache-Control "no-cache, must-revalidate, public"
+  Header set Pragma "no-cache"
+</Directory>
+
+<Directory /usr/share/@WORLDVIEW@/web/data>
+  ExpiresActive On
+  ExpiresDefault A0
+  Header set Cache-Control "no-cache, must-revalidate, public"
+  Header set Pragma "no-cache"
+</Directory>
+
+<Directory /usr/share/@WORLDVIEW@/web/pages>
+  ExpiresActive On
+  ExpiresDefault A0
+  Header set Cache-Control "no-cache, must-revalidate, public"
+  Header set Pragma "no-cache"
+</Directory>
+
+<Directory /usr/share/@WORLDVIEW@/web/brand>
+  ExpiresActive On
+  ExpiresDefault A0
+  Header set Cache-Control "no-cache, must-revalidate, public"
+  Header set Pragma "no-cache"
 </Directory>
 
 <Directory /usr/share/@WORLDVIEW@/web/service>
-    Options ExecCGI
+  Options ExecCGI
 </Directory>
 
